# Restar

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION.md  dvc.yaml  mlflow.db  params.yaml  preds.csv  pyproject.toml  requirements-dev.txt  requirements-infer.txt  requirements.txt  sample_input.csv  sample_input.json  vars.yaml  vars_hf.yaml
.dvc/: config
.github/workflows/: ci.yml
artifacts/pretrained/: .gitignore
configs/: ci_smoke.yaml  data_frozen.yaml  default.yaml  dvc_full.yaml  dvc_smoke.yaml  snapshot_split.yaml
configs/legacy/: dvc_config.yaml  dvc_hf_config.yaml  smoke.yaml  tiny.yaml
scripts/: dump_abstain.py  label_to_parquet.py  make_instance_weights.py  mlflow_server.sh  pull_mar.sh  pull_model.sh  push_model_to_hf.py
src/ml_restar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/restar/: __init__.py  abstain_stream.py  config.py  data.py  eval_utils.py  evaluate.py  evaluate_dataset.py  fetch_pretrained.py  infer.py  labeling.py  merge_labels.py  predict.py  prepare.py  prepare_batch.py  train.py  utils.py
src/restar/tools/: __init__.py  abstain_stream.py  snapshot_stream.py
tests/: test_config.py  test_labeling.py  test_leakage.py  test_postprocess.py  test_split_and_push.py  test_validation.py
tools/: bench_infer.py  build_blocklist.py  dump_abstain.py  export_torchserve.py  label_to_parquet.py  make_pool_from_snapshot.py  split_and_push_to_hf.py
torchserve/: Dockerfile  config.properties  handler.py
torchserve/artifacts/: config.json  tokenizer.json  tokenizer_config.json
