[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-restar"
version = "0.1.0"
description = "Re*Star: make reviews' stars consistent with text sentiment, with abstention"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "mlflow>=2.12",
    "scikit-learn>=1.3",
    "transformers>=4.36",
    "datasets>=2.16",
    "huggingface_hub>=0.20",
    "torch>=2.0",
    "pyarrow>=12",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]
